--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
 		"node-sass": "^7.0.1",
 		"npm-run-all": "^4.1.5",
 		"postcss-cli": "^10.0.0"
+	},
+	"dependencies": {
+		"swiper": "^8.4.2"
 	}
 }
